--- a/src/app/master/modify-master-modal/modify-master-modal.component.html
+++ b/src/app/master/modify-master-modal/modify-master-modal.component.html
@@ -1,5 +1,5 @@
 <p>modify-master-modal works!</p>
-
+ <!-- UNUSED -->
 <div class="modal-header">
     <h5 class="modal-title">
       Modify Existing User<br>
