--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+ 
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
 
@@ -9,6 +9,7 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+//Import material core theme
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 body { 
@@ -28,7 +29,10 @@ body {
 @import '~@swimlane/ngx-datatable/index.css';
 @import '~@swimlane/ngx-datatable/themes/material.scss';
 @import '~@swimlane/ngx-datatable/assets/icons.css';
+@import '~@swimlane/ngx-datatable/themes/bootstrap.scss';
 
+// @import '~@swimlane/ngx-datatable/themes/dark.scss';
+// @import './package/themes/material.scss';
 //Custom Styling
 
 .ngx-datatable.fixed-header .datatable-header .datatable-header-inner .datatable-header-cell {
@@ -37,6 +41,14 @@ body {
   display:block;
 
 }
+
+
+::ng-deep .ngx-datatable.bootstrap .datatable-body .datatable-body-
+   row.active {
+     background-color: #53f89d;
+     color: #FFF;
+   }
+
 .ngx-datatable .datatable-body-cell {
   font-size: .8rem;
   
@@ -70,3 +82,5 @@ button.calendar, button.calendar:active {
   padding:8px;
   margin:15px auto;
    }
+
+  
