--- a/src/app/master/delete-master-modal/delete-master-modal.component.html
+++ b/src/app/master/delete-master-modal/delete-master-modal.component.html
@@ -7,6 +7,9 @@
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete 1 row?</p>
+    <p>Asset Number = {{assetNumber}}</p>
+    <p>Asset Description = {{assetName}}</p>
+
   </div>
   <div class="modal-footer"> 
   
