--- a/src/app/asset/asset-list/asset-list.component.html
+++ b/src/app/asset/asset-list/asset-list.component.html
@@ -77,4 +77,5 @@
     </div>
     <br><br><hr>
     <!-- <app-asset-table></app-asset-table> -->
-    <app-asset-test (valuePass)="calibAdd($event)"></app-asset-test>
+    <app-asset-test></app-asset-test>
+    <!-- (valuePass)="calibAdd($event)" -->
