--- a/src/app/asset/delete-asset-modal/delete-asset-modal.component.html
+++ b/src/app/asset/delete-asset-modal/delete-asset-modal.component.html
@@ -1,9 +1,9 @@
 
 <div class="modal-header">
-    <h5 class="modal-title">Delete Entry</h5> 
-    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <h5 class="modal-title">Delete Asset</h5> 
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="activeModal.dismiss('cancel');">
      <span aria-hidden="true">&times;</span>
-    </button> -->
+    </button>
   </div>
   <div class="modal-body">
     <p>Are you sure you want to delete 1 row?</p>
@@ -13,7 +13,7 @@
   </div>
   <div class="modal-footer"> 
   
-    <button type="button" class="btn btn-danger"  (click)="activeModal.dismiss('delete'); this.deleteMaster()">Delete</button>
+    <button type="button" class="btn btn-danger"  (click)="activeModal.dismiss('delete'); this.deleteAsset()">Delete</button>
     <button type="button" class="btn btn-grey" (click)="activeModal.dismiss('cancel');">Cancel</button>
    
   </div>
