--- a/src/app/asset/asset-test/asset-test.component.html
+++ b/src/app/asset/asset-test/asset-test.component.html
@@ -11,11 +11,42 @@
         |
         <a href="javascript:void(0)" (click)="table.rowDetail.collapseAllRows()">Collapse All</a>
       </small>
+<ng-container style="text-align: center">
+      <div class="filter">
+       
+        <form style="text-align:center" [formGroup]="formControl">
+          <mat-form-field>
+            <input matInput formControlName="Asset_no"  (keyup)="searchMaster($event)">
+            <mat-placeholder>Asset number</mat-placeholder>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput formControlName="Asset_desc" (keyup)="searchMaster($event)">
+            <mat-placeholder>Asset description</mat-placeholder>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput formControlName="Category" (keyup)="searchMaster($event)">
+            <mat-placeholder>Category</mat-placeholder>
+          </mat-form-field>
+          <mat-form-field>
+            <input matInput formControlName="Location" (keyup)="searchMaster($event)">
+            <mat-placeholder>Location</mat-placeholder>
+          </mat-form-field>
+        <!--  <mat-form-field>
+             <input matInput formControlName="Start_date" (keyup)="searchMaster($event)">
+             <mat-placeholder>search by start date</mat-placeholder>
+            </mat-form-field>
+            <mat-form-field>
+            <input matInput formControlName="End_date" (keyup)="searchMaster($event)">
+            <mat-placeholder>search by end date</mat-placeholder>
+            </mat-form-field> -->
+        </form>
+      </div> 
+    </ng-container>
 </div>
       <div class="card-ngx-datatable table-responsive">
     <ngx-datatable
       #myTable
-      class="material expandable"
+      class="material expandable striped"
       [columnMode]="ColumnMode.force"
       [headerHeight]="50"
       [footerHeight]="50"
@@ -29,24 +60,118 @@
     >
       <!-- Row Detail Template -->
       <ngx-datatable-row-detail [rowHeight]="'auto'" #myDetailRow (toggle)="onDetailToggle($event)">
-        <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>        
-                    <div>
-                      <ngx-datatable 
+        <ng-template let-row="row" let-expanded="expanded" ngx-datatable-row-detail-template>                    
+         
+                  
+                    <ngx-datatable 
                       #myDaughter 
                       class="material striped" 
                       [columnMode]="ColumnMode.force" 
                       [headerHeight]="40" 
                       [rows]="getDetailRows(row)"
-                      [rowHeight]="'auto'" 
+                      [rowHeight]="'auto'"
                       [loadingIndicator]="loadingIndicator" 
-                      [externalPaging]="false">
-                        <ngx-datatable-column name="Calibration Number" prop="Calib_no"></ngx-datatable-column>
-                        <ngx-datatable-column name="Start Date" prop="Start_date"></ngx-datatable-column>
-                        <ngx-datatable-column name="End Date" prop="End_date"></ngx-datatable-column>
-                        <ngx-datatable-column name="Company Name" prop="Company_name"></ngx-datatable-column>
+                      [externalPaging]="false"
+                      >
+                      <ng-container [ngTemplateOutlet]= "calib>0 ? mul : single"></ng-container>
+                       <ng-template #mul>
+                        <ngx-datatable-column name="Calibration Number" prop="Calib_no">
+                          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+                            <span
+                              title="click to edit"
+                              (click)="editing[rowIndex + '-Calib_no'] = true"
+                              *ngIf="!editing[rowIndex + '-Calib_no']"
+                            ><i  *ngIf="!value"  class="fa-solid fa-pen-to-square"></i>
+                              {{ value }}
+                            </span>
+                            <input
+                              autofocus
+                              (blur)="updateCalib($event, 'Calib_no', rowIndex)"
+                              *ngIf="editing[rowIndex + '-Calib_no']"
+                              type="number"
+                              [value]="value"
+                            />
+                          </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Start Date" prop="Start_date" >
+                          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row" >
+                            <span
+                                title="click to edit"
+                                (click)="editing[rowIndex + '-Start_date'] = true" 
+                                *ngIf="!editing[rowIndex + '-Start_date']">
+                                <i  *ngIf="!value || value ==='0000-00-00'"  class="fa-solid fa-pen-to-square" ></i>
+                                <p  *ngIf="value!=='0000-00-00'" >{{value}}</p>
+                            </span>
+                            <mat-form-field *ngIf="editing[rowIndex + '-Start_date']" (blur)="editing[rowIndex + '-Start_date'] = false" style="width:90%">
+                              <input  matInput [value]="value" [matDatepicker]="picker" placeholder="Choose a date"  (dateInput)="updateCalib($event, 'Start_date', rowIndex)" />
+                              <mat-hint>MM/DD/YYYY</mat-hint>  
+                              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                              <mat-datepicker #picker ></mat-datepicker>
+                            </mat-form-field>
+                          </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="End Date" prop="End_date" >
+                          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row" >
+                            <span
+                                title="click to edit"
+                                (click)="editing[rowIndex + '-End_date'] = true" 
+                                *ngIf="!editing[rowIndex + '-End_date']">
+                                <i  *ngIf="!value || value ==='0000-00-00'"  class="fa-solid fa-pen-to-square" ></i>
+                                <p  *ngIf="value!=='0000-00-00'" >{{value}}</p>
+                            </span>
+                            <mat-form-field *ngIf="editing[rowIndex + '-End_date']" (blur)="editing[rowIndex + '-Start_date'] = false" style="width:90%">
+                              <input  matInput [value]="value" [matDatepicker]="picker" placeholder="Choose a date"  (dateInput)="updateCalib($event, 'End_date', rowIndex)" />
+                              <mat-hint>MM/DD/YYYY</mat-hint>  
+                              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                              <mat-datepicker #picker ></mat-datepicker>
+                            </mat-form-field>
+                          </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Company Name" prop="Company_name">
+                        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+                            <span
+                              title="click to edit"
+                              (click)="editing[rowIndex + '-Company_name'] = true"
+                              *ngIf="!editing[rowIndex + '-Company_name']"
+                            ><i *ngIf="!value"  class="fa-solid fa-pen-to-square"></i>
+                              {{ value }}
+                            </span>
+                            <input
+                              autofocus
+                              (blur)="updateCalib($event, 'Company_name', rowIndex)"
+                              *ngIf="editing[rowIndex + '-Company_name']"
+                              type="text"
+                              [value]="value"
+                            />
+                          </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column name="Actions">
+                          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value"  let-row="row">
+                            <span>
+                               <i (click)="deleteCalib(row, $event, 'delete_calib')" class="fa-solid fa-trash" style="cursor:pointer;"></i>
+                             </span>
+                        </ng-template>
+                        </ngx-datatable-column>
+                      </ng-template>
+
+
+                      <!-- add-calib if no data -->
+                      <ng-template #single>
+                        <ngx-datatable-column>
+                          <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+                            <span>No Calibration</span>
+                            <!-- <button (click)="Addcalib(row)" style=" padding:8px;margin:15px auto;width:15%;" class="float-sm-right btn-green btn-sm" ><b>Add Calibration&nbsp;&nbsp;</b><i class="fa fa-circle-plus"></i></button> -->
+                            </ng-template>
+                          </ngx-datatable-column>
+                      </ng-template> 
+
                       </ngx-datatable>
-                    </div>
                 </ng-template>
+               
       </ngx-datatable-row-detail>
 
       <!-- Column Templates -->
@@ -74,26 +199,85 @@
         </ng-template>
       </ngx-datatable-column>
       
+      <!-- <ngx-datatable-column name="Asset Number" prop="Asset_no">
+        <ng-template let-value="value" ngx-datatable-cell-template>
+          <p>{{ value }}</p>
+        </ng-template>
+      </ngx-datatable-column> -->
+
+      <!-- INLINE EDIT!! -->
       <ngx-datatable-column name="Asset Number" prop="Asset_no">
-        <ng-template let-value="value" ngx-datatable-cell-template>
-          <p>{{ value }}</p>
+       
+       </ngx-datatable-column>
+
+      
+      <ngx-datatable-column name="Asset Description" prop="Asset_desc">
+        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+          <span
+            title="click to edit"
+            (click)="editing[rowIndex + '-Asset_desc'] = true"
+            *ngIf="!editing[rowIndex + '-Asset_desc']"
+          ><i  *ngIf="!value"  class="fa-solid fa-pen-to-square"></i>
+            {{ value }}
+          </span>
+          <input
+            autofocus
+            matInput
+            (blur)="updateValue($event, 'Asset_desc', rowIndex)"
+            *ngIf="editing[rowIndex + '-Asset_desc']"
+            type="text"
+            [value]="value"
+          />
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Asset Description"  prop="Asset_desc">
-        <ng-template let-value="value" ngx-datatable-cell-template>
-          <p>{{ value }}</p>
+
+      <ngx-datatable-column name="Category" prop="Category">
+        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+          <span
+            title="click to edit"
+            (click)="editing[rowIndex + '-Category'] = true"
+            *ngIf="!editing[rowIndex + '-Category']"
+          ><i  *ngIf="!value"  class="fa-solid fa-pen-to-square"></i>
+            {{ value }}
+          </span>
+          <input
+            autofocus
+            (blur)="updateValue($event, 'Category', rowIndex)"
+            *ngIf="editing[rowIndex + '-Category']"
+            type="text"
+            [value]="value"
+          />
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Category"  prop="Category">
-        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-           <p>{{ value }}</p>
+
+      <ngx-datatable-column name="Location" prop="Location">
+        <ng-template ngx-datatable-cell-template let-rowIndex="rowIndex" let-value="value" let-row="row">
+          <span
+            title="click to edit"
+            (click)="editing[rowIndex + '-Location'] = true"
+            *ngIf="!editing[rowIndex + '-Location']"
+          ><i  *ngIf="!value"  class="fa-solid fa-pen-to-square"></i>
+            {{ value }}
+          </span>
+          <input
+            autofocus
+            (blur)="updateValue($event, 'Location', rowIndex)"
+            *ngIf="editing[rowIndex + '-Location']"
+            type="text"
+            [value]="value"
+          />
         </ng-template>
       </ngx-datatable-column>
-      <ngx-datatable-column name="Location"  prop="Location">
-        <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-           <p>{{ value }}</p>
-        </ng-template>
+
+      <ngx-datatable-column name="Actions">
+        <ng-template ngx-datatable-cell-template let-value="value"  let-row="row">
+          <span>
+             <button (click)="Addcalib(row)"  class="float-sm-right btn btn-primary btn-sm" ><b>Add Calibration&nbsp;&nbsp;</b>
+              <i class="fa fa-circle-plus"></i></button>
+           </span>
+      </ng-template>
       </ngx-datatable-column>
+
      
     </ngx-datatable>
   </div>
