--- a/src/app/asset/asset-list/asset-list.component.html
+++ b/src/app/asset/asset-list/asset-list.component.html
@@ -1,4 +1,14 @@
 
+<!-- Page Header -->
+<h4 class="font-weight-bold">
+  <span >Asset List</span>
+  <a type="button" class="btn btn-link" href="/dashboard">Main Dashboard</a> |
+  <button type="button" class="btn btn-link" (click)="this.test()">Asset Table</button> |
+  <button type="button" class="btn btn-link" (click)="this.test2()">Entry Form</button>
+</h4>
+<hr><br>
+
+
 <!-- Default form register -->
 <div class="col-md-6 mx-auto"> 
     <form [formGroup]="addCalibForm"  class="border border-grey p-5">
