--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,11 @@
 <!-- Page Header -->
-<h2 class="font-weight-bold py-3 mb-4">
+<h2 class="font-weight-bold">
     <i class="ion ion-md-contacts"></i>&nbsp;&nbsp;<span >Dashboard</span>
+    <a type="button" class="btn btn-link" href="/asset-list" >Asset List</a> |
+    <a type="button" class="btn btn-link" href="/master-list">Master List</a> |
+    <a type="button" class="btn btn-link" href="/user">User Account</a>
   </h2>
   <hr>
   <app-card></app-card>
 <br>
-<app-chart></app-chart> 
+<!-- <app-chart></app-chart>  -->
