--- a/src/app/master/master-list/master-list.component.html
+++ b/src/app/master/master-list/master-list.component.html
@@ -1,3 +1,11 @@
+<!-- Page Header -->
+<h4 class="font-weight-bold">
+  <span >Master List</span> 
+   <a type="button" class="btn btn-link" href="/dashboard">Main Dashboard</a> |
+  <button type="button" class="btn btn-link" (click)="this.test()">Master Table</button> |
+  <button type="button" class="btn btn-link" (click)="this.test2()">Entry Form</button>
+</h4>
+<hr><br>
 <!--ASSET ENTRY FORM -->
 <div class="col-md-6 mx-auto"> 
 <form [formGroup]="addMasterForm" class="border border-grey p-5">
