--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <!-- Page Header -->
-<h4 class="font-weight-bold py-3 mb-4">
+<h4 class="font-weight-bold ">
     <i class="ion ion-md-contacts"></i>&nbsp;&nbsp;<span >User List</span>
   </h4>
   <hr><br>
