--- a/src/app/dashboard/card/card.component.html
+++ b/src/app/dashboard/card/card.component.html
@@ -1,36 +1,37 @@
 <h4>General Report</h4><br>
 <div class="row">
-    <div class="row justify-content-center">
+<div class="row justify-content-center">
 
     <div class="col-sm-4">
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 25rem;">
       <div class="card-body">
-        <h5 class="card-title">Faulty/Missing Asset</h5>
-        <p class="card-text">From Master list </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Faulty/Missing Asset<span class="badge bg-info" style="margin-left:4em">{{missing}}</span></h5>
+        <p class="card-text">From Master list</p>
+
+        <!-- <a href="/master-list" class="btn btn-primary">View data</a> -->
       </div>
     </div>
     </div>
     
     <div class="col-sm-4">
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 25rem;">
         <div class="card-body">
-          <h5 class="card-title">Total Assets</h5>
+          <h5 class="card-title">Total Assets<span class="badge bg-info">{{assetData.length}}</span></h5>
           <p class="card-text">From Asset list </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <!-- <a href="/asset-list" class="btn btn-primary">View data</a> -->
         </div>
       </div>
     </div>
 
     <div class="col-sm-4">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 25rem;">
             <div class="card-body">
-              <h5 class="card-title">Total Entry</h5>
+              <h5 class="card-title">Total Entry<span class="badge bg-info">{{masterData.length}}</span></h5>
               <p class="card-text">From Master list</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <!-- <a href="/master-list" class="btn btn-primary">View data </a> -->
             </div>
           </div>
         </div>
-
-    </div>
+      </div>
+    
 </div>
